# libepoxy

./: .gitignore  .travis.yml  CMakeLists.txt  Epoxy-VC12.sln  README.md  appveyor.yml
CMake/modules/: FindGLESv1.cmake
VC12/: Epoxy.vcxproj  Epoxy.vcxproj.filters  epoxy_config.h  gl_generated_dispatch.c  wgl_generated_dispatch.c
VC12/Include/: epoxy_config.h
VC12/epoxy/: gl_generated.h
contrib/CMake/modules/: FindGLESv1.cmake  FindGLESv2.cmake
contrib/MSVC/: Epoxy-Android.vcxproj  Epoxy-Android.vcxproj.filters  Epoxy-Windows.vcxproj  Epoxy-Windows.vcxproj.filters  Epoxy.sln
include/: config.h.in  epoxy_config.h.in
include/epoxy/: egl.h  gl.h  wgl.h
src/: dispatch_common.c  dispatch_common.h  dispatch_wgl.c  gen_dispatch.py
test/: egl_and_glx_different_pointers.c  egl_common.c  egl_common.h  egl_gl.c  egl_has_extension_nocontext.c  egl_without_glx.c  glx_common.h  headerguards.c  khronos_typedefs_nonepoxy.c  miscdefines.c  wgl_common.c  wgl_common.h  wgl_core_and_exts.c  wgl_per_context_funcptrs.c  wgl_usefontbitmaps.c
